# servant-event-stream

./: .envrc  .gitignore  CHANGELOG.md  LICENSE  README.md  default.nix  flake.nix  servant-event-stream.cabal  servant-event-stream.nix  shell.nix  stack.yaml
.github/workflows/: test.yml
examples/: Main.hs
nix/: sources.json
src/Servant/: EventStream.hs
src/Servant/API/: EventStream.hs
tests/: Main.hs  Spec.hs
