cabal-version:       >=1.10
name:                servant-event-stream
version:             0.1.0.0
stability:           alpha

synopsis:            Servant support for Server-Sent events
category:            Servant, Web
-- description:

homepage:            https://github.com/bflyblue/servant-event-stream
bug-reports:         https://github.com/bflyblue/servant-event-stream/issues
license:             BSD3
license-file:        LICENSE
author:              Shaun Sharples
maintainer:          shaun.sharples@gmail.com
copyright:           (c) 2019 Shaun Sharples
build-type:          Simple

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/bflyblue/servant-event-stream.git

library
  exposed-modules:
    Servant.EventStream

  default-extensions:
    MultiParamTypeClasses
    OverloadedStrings

  build-depends:
      base                             < 4.13
    , binary                           < 0.11
    , http-media                       < 0.9
    , pipes             >= 4.3.0    && < 4.4
    , servant           >= 0.15     && < 0.17
    , servant-pipes     >= 0.15     && < 0.16
    , wai-extra         >= 3.0.0.0  && < 3.1

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
