cabal-version:       >=1.10
name:                servant-event-stream
version:             0.1.0.0
stability:           alpha

synopsis:            Servant support for Server-Sent events
category:            Servant, Web
-- description:

homepage:            https://github.com/bflyblue/servant-event-stream
bug-reports:         https://github.com/bflyblue/servant-event-stream/issues
license:             BSD3
license-file:        LICENSE
author:              Shaun Sharples
maintainer:          shaun.sharples@gmail.com
copyright:           (c) 2021 Shaun Sharples
build-type:          Simple

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/bflyblue/servant-event-stream.git

library
  exposed-modules:
    Servant.EventStream

  default-extensions:
    MultiParamTypeClasses
    OverloadedStrings

  build-depends:
      base                  >= 4.9 && < 4.15
    , binary                >= 0.7 && < 0.11
    , http-media            >= 0.7.1.3 && < 0.9
    , lens                  >= 4.17 && < 4.20
    , pipes                 >= 4.3.9 && < 4.4
    , servant-foreign       >= 0.15 && < 0.16
    , servant-js            >= 0.9 && < 0.10
    , servant-pipes         >= 0.15 && < 0.16
    , servant-server        >= 0.15 && < 0.19
    , text                  >= 1.2.3 && < 1.3
    , wai-extra             >= 3.0 && < 3.2

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
