cabal-version: >=1.10
name: servant-event-stream
version: 0.3.0.1
stability: alpha
synopsis: Servant support for Server-Sent events
category: Servant, Web
description:
  This library adds necessary type combinators to support
  Server Sent Events within Servant ecosystem.

homepage: https://github.com/bflyblue/servant-event-stream
bug-reports: https://github.com/bflyblue/servant-event-stream/issues
license: BSD3
license-file: LICENSE
author: Shaun Sharples
maintainer: shaun.sharples@gmail.com
copyright: (c) 2024 Shaun Sharples
build-type: Simple
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/bflyblue/servant-event-stream.git

library
  exposed-modules: Servant.API.EventStream
  default-extensions:
    MultiParamTypeClasses
    OverloadedStrings

  build-depends:
    attoparsec >=0.13.2.2 && <0.15,
    base >=4.10 && <4.20,
    bytestring >=0.11.1.0 && <0.13,
    http-media >=0.7.1.3 && <0.9,
    lens >=4.17 && <5.4,
    servant >=0.15 && <0.21,
    servant-foreign >=0.15 && <0.17,
    servant-server >=0.15 && <0.21,
    text >=1.2.3 && <2.2

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  default-language: Haskell2010
  build-depends:
    QuickCheck,
    aeson,
    base >=4.10 && <4.20,
    bytestring,
    servant >=0.15 && <0.21,
    servant-event-stream,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    text >=1.2.3 && <2.2